fix: registration on gateway service